Prevent overflowing content from stretching page

--- a/templates/static/site.css
+++ b/templates/static/site.css
@@ -135,6 +135,10 @@ div.session.unvoted .orange {
     font-size: 20px;
 }
 
+.content-box p {
+    overflow-x: auto;
+}
+
 p.author {
     font-size: 12px;
     color: #888;
